--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,25 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.container{
+    position: relative;
+    background: #4A4873;
+    height: 150px;
+    
+}
+
+.row{
+    padding: 20px;
+}
+
+
+.col {
+    background: #6D5DA6;
+    height: 100px;
+    font-size: 50px;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
